Da fixare il controllo sulla registrazione del cittadino